Make rules agnostic of changeLog format. Improve logging.