@@ -1,24 +1,23 @@
 package io.github.htshame.rule.processor;
 
+import io.github.htshame.change.set.ChangeSetElement;
 import io.github.htshame.enums.RuleEnum;
+import io.github.htshame.exception.ChangeLogParseException;
 import io.github.htshame.exception.ExclusionParserException;
 import io.github.htshame.exception.ValidationException;
 import io.github.htshame.util.parser.ExclusionParser;
 import org.junit.Test;
-import org.w3c.dom.Document;
 import org.w3c.dom.Element;
-import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
-import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static io.github.htshame.util.ChangeSetUtil.CHANGE_SET_TAG_NAME;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -37,7 +36,7 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
      * Default constructor.
      */
     public AttrEndsWithProcessorTest() {
-        super(RULE_URL);
+        super(RULE_URL, RuleEnum.ATTRIBUTE_ENDS_WITH);
     }
 
     /**
@@ -49,7 +48,7 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
         Element ruleElement = prepareRuleELement();
 
         // act
-        RuleEnum actual = AttrEndsWithProcessor.fromXml(ruleElement).getName();
+        RuleEnum actual = AttrEndsWithProcessor.instantiate(ruleElement).getName();
 
         // assert
         assertEquals(RuleEnum.ATTRIBUTE_ENDS_WITH, actual);
@@ -62,31 +61,31 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailure() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
         List<String> expectedErrorMessages = Arrays.asList(
-                "ChangeSet: id=\"changelog_02_1\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_ENDS_WITH.getValue() + "]\n"
-                        + "Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                        + "but found: [fk_user_activation_user_profile_id_user_profile_id]",
-                "ChangeSet: id=\"changelog_02_2\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_ENDS_WITH.getValue() + "]\n"
-                        + "Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                        + "but found: [user_activation_user_profile_id_user_profile_id_FK]");
+                prepareTestErrorMessage(
+                        "changelog_02_1",
+                        "test",
+                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
+                                + "but found: [fk_user_activation_user_profile_id_user_profile_id]")),
+                prepareTestErrorMessage(
+                        "changelog_02_2",
+                        "test",
+                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
+                                + "but found: [user_activation_user_profile_id_user_profile_id_FK]")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                AttrEndsWithProcessor.fromXml(ruleElement).validate(
+                AttrEndsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_ENDS_WITH_FAILURE_XML);
@@ -108,31 +107,31 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailureWrongExclusion() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_WRONG_URL));
         List<String> expectedErrorMessages = Arrays.asList(
-                "ChangeSet: id=\"changelog_02_1\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_ENDS_WITH.getValue() + "]\n"
-                        + "Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                        + "but found: [fk_user_activation_user_profile_id_user_profile_id]",
-                "ChangeSet: id=\"changelog_02_2\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_ENDS_WITH.getValue() + "]\n"
-                        + "Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                        + "but found: [user_activation_user_profile_id_user_profile_id_FK]");
+                prepareTestErrorMessage(
+                        "changelog_02_1",
+                        "test",
+                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
+                                + "but found: [fk_user_activation_user_profile_id_user_profile_id]")),
+                prepareTestErrorMessage(
+                        "changelog_02_2",
+                        "test",
+                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
+                                + "but found: [user_activation_user_profile_id_user_profile_id_FK]")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                AttrEndsWithProcessor.fromXml(ruleElement).validate(
+                AttrEndsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_ENDS_WITH_FAILURE_XML);
@@ -154,27 +153,26 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailureWithExclusion() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_URL));
-        List<String> expectedErrorMessages = List.of(
-                "ChangeSet: id=\"changelog_02_2\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_ENDS_WITH.getValue() + "]\n"
-                        + "Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                        + "but found: [user_activation_user_profile_id_user_profile_id_FK]");
+        List<String> expectedErrorMessages = Collections.singletonList(
+                prepareTestErrorMessage(
+                        "changelog_02_2",
+                        "test",
+                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
+                                + "but found: [user_activation_user_profile_id_user_profile_id_FK]")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                AttrEndsWithProcessor.fromXml(ruleElement).validate(
+                AttrEndsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_ENDS_WITH_FAILURE_XML);
@@ -196,21 +194,19 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateSuccess() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_ENDS_WITH_SUCCESS_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_ENDS_WITH_SUCCESS_XML);
         boolean isExceptionThrown = false;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
-            Element changeSetElement = (Element) changeSetList.item(i);
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                AttrEndsWithProcessor.fromXml(ruleElement).validate(
+                AttrEndsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_ENDS_WITH_SUCCESS_XML);
