@@ -1,24 +1,23 @@
 package io.github.htshame.rule.processor;
 
+import io.github.htshame.change.set.ChangeSetElement;
 import io.github.htshame.enums.RuleEnum;
+import io.github.htshame.exception.ChangeLogParseException;
 import io.github.htshame.exception.ExclusionParserException;
 import io.github.htshame.exception.ValidationException;
 import io.github.htshame.util.parser.ExclusionParser;
 import org.junit.Test;
-import org.w3c.dom.Document;
 import org.w3c.dom.Element;
-import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
-import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static io.github.htshame.util.ChangeSetUtil.CHANGE_SET_TAG_NAME;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -38,7 +37,7 @@ public class AttrStartsWithProcessorTest extends RuleProcessorTestUtil {
      * Default constructor.
      */
     public AttrStartsWithProcessorTest() {
-        super(RULE_URL);
+        super(RULE_URL, RuleEnum.ATTRIBUTE_STARTS_WITH);
     }
 
     /**
@@ -50,7 +49,7 @@ public class AttrStartsWithProcessorTest extends RuleProcessorTestUtil {
         Element ruleElement = prepareRuleELement();
 
         // act
-        RuleEnum actual = AttrStartsWithProcessor.fromXml(ruleElement).getName();
+        RuleEnum actual = AttrStartsWithProcessor.instantiate(ruleElement).getName();
 
         // assert
         assertEquals(RuleEnum.ATTRIBUTE_STARTS_WITH, actual);
@@ -63,31 +62,31 @@ public class AttrStartsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailure() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
         List<String> expectedErrorMessages = Arrays.asList(
-                "ChangeSet: id=\"changelog_02_3\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_STARTS_WITH.getValue() + "]\n"
-                        + "<createIndex indexName=\"user_metadata_external_user_id_unique_idx\"> "
-                        + "must start with \"idx_\"",
-                "ChangeSet: id=\"changelog_02_4\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_STARTS_WITH.getValue() + "]\n"
-                        + "<createIndex indexName=\"1id_user_metadata_external_user_id_unique_idx\"> "
-                        + "must start with \"idx_\"");
+                prepareTestErrorMessage(
+                        "changelog_02_3",
+                        "test",
+                        List.of("<createIndex indexName=\"user_metadata_external_user_id_unique_idx\"> "
+                                + "must start with \"idx_\"")),
+                prepareTestErrorMessage(
+                        "changelog_02_4",
+                        "test",
+                        List.of("<createIndex indexName=\"1id_user_metadata_external_user_id_unique_idx\"> "
+                                + "must start with \"idx_\"")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                AttrStartsWithProcessor.fromXml(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_STARTS_WITH_FAILURE_XML);
@@ -109,31 +108,31 @@ public class AttrStartsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailureWrongExclusion() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_WRONG_URL));
         List<String> expectedErrorMessages = Arrays.asList(
-                "ChangeSet: id=\"changelog_02_3\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_STARTS_WITH.getValue() + "]\n"
-                        + "<createIndex indexName=\"user_metadata_external_user_id_unique_idx\"> "
-                        + "must start with \"idx_\"",
-                "ChangeSet: id=\"changelog_02_4\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_STARTS_WITH.getValue() + "]\n"
-                        + "<createIndex indexName=\"1id_user_metadata_external_user_id_unique_idx\"> "
-                        + "must start with \"idx_\"");
+                prepareTestErrorMessage(
+                        "changelog_02_3",
+                        "test",
+                        List.of("<createIndex indexName=\"user_metadata_external_user_id_unique_idx\"> "
+                                + "must start with \"idx_\"")),
+                prepareTestErrorMessage(
+                        "changelog_02_4",
+                        "test",
+                        List.of("<createIndex indexName=\"1id_user_metadata_external_user_id_unique_idx\"> "
+                                + "must start with \"idx_\"")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                AttrStartsWithProcessor.fromXml(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_STARTS_WITH_FAILURE_XML);
@@ -155,27 +154,26 @@ public class AttrStartsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailureWithExclusion() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_URL));
-        List<String> expectedErrorMessages = List.of(
-                "ChangeSet: id=\"changelog_02_4\", author=\"test\". "
-                        + "Rule [" + RuleEnum.ATTRIBUTE_STARTS_WITH.getValue() + "]\n"
-                        + "<createIndex indexName=\"1id_user_metadata_external_user_id_unique_idx\"> "
-                        + "must start with \"idx_\"");
+        List<String> expectedErrorMessages = Collections.singletonList(
+                prepareTestErrorMessage(
+                        "changelog_02_4",
+                        "test",
+                        List.of("<createIndex indexName=\"1id_user_metadata_external_user_id_unique_idx\"> "
+                                + "must start with \"idx_\"")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                AttrStartsWithProcessor.fromXml(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_STARTS_WITH_FAILURE_XML);
@@ -197,22 +195,19 @@ public class AttrStartsWithProcessorTest extends RuleProcessorTestUtil {
     public void testValidateSuccess() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + ATTR_STARTS_WITH_SUCCESS_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + ATTR_STARTS_WITH_SUCCESS_XML);
         boolean isExceptionThrown = false;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-
-                AttrStartsWithProcessor.fromXml(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         ATTR_STARTS_WITH_SUCCESS_XML);
