@@ -1,24 +1,23 @@
 package io.github.htshame.rule.processor;
 
+import io.github.htshame.change.set.ChangeSetElement;
 import io.github.htshame.enums.RuleEnum;
+import io.github.htshame.exception.ChangeLogParseException;
 import io.github.htshame.exception.ExclusionParserException;
 import io.github.htshame.exception.ValidationException;
 import io.github.htshame.util.parser.ExclusionParser;
 import org.junit.Test;
-import org.w3c.dom.Document;
 import org.w3c.dom.Element;
-import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
-import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static io.github.htshame.util.ChangeSetUtil.CHANGE_SET_TAG_NAME;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -38,7 +37,7 @@ public class NoHyphensInAttributesProcessorTest extends RuleProcessorTestUtil {
      * Default constructor.
      */
     public NoHyphensInAttributesProcessorTest() {
-        super(RULE_URL);
+        super(RULE_URL, RuleEnum.NO_HYPHENS_IN_ATTRIBUTES);
     }
 
     /**
@@ -50,7 +49,7 @@ public class NoHyphensInAttributesProcessorTest extends RuleProcessorTestUtil {
         Element ruleElement = prepareRuleELement();
 
         // act
-        RuleEnum actual = NoHyphensInAttributesProcessor.fromXml(ruleElement).getName();
+        RuleEnum actual = NoHyphensInAttributesProcessor.instantiate(ruleElement).getName();
 
         // assert
         assertEquals(RuleEnum.NO_HYPHENS_IN_ATTRIBUTES, actual);
@@ -63,29 +62,31 @@ public class NoHyphensInAttributesProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailure() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
         List<String> expectedErrorMessages = Arrays.asList(
-                "ChangeSet: id=\"changelog_02_3\", author=\"test\". "
-                        + "Rule [" + RuleEnum.NO_HYPHENS_IN_ATTRIBUTES.getValue() + "]\n"
-                        + "Attribute tableName in element <createIndex> contains hyphen in value: [user-metadata].",
-                "ChangeSet: id=\"changelog_02_4\", author=\"test\". "
-                        + "Rule [" + RuleEnum.NO_HYPHENS_IN_ATTRIBUTES.getValue() + "]\n"
-                        + "Attribute tableName in element <createIndex> contains hyphen in value: [user-metadata].");
+                prepareTestErrorMessage(
+                        "changelog_02_3",
+                        "test",
+                        List.of("Attribute tableName in element <createIndex> "
+                                + "contains hyphen in value: [user-metadata].")),
+                prepareTestErrorMessage(
+                        "changelog_02_4",
+                        "test",
+                        List.of("Attribute tableName in element <createIndex> "
+                                + "contains hyphen in value: [user-metadata].")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                NoHyphensInAttributesProcessor.fromXml(ruleElement).validate(
+                NoHyphensInAttributesProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML);
@@ -107,29 +108,31 @@ public class NoHyphensInAttributesProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailureWrongExclusion() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_WRONG_URL));
         List<String> expectedErrorMessages = Arrays.asList(
-                "ChangeSet: id=\"changelog_02_3\", author=\"test\". "
-                        + "Rule [" + RuleEnum.NO_HYPHENS_IN_ATTRIBUTES.getValue() + "]\n"
-                        + "Attribute tableName in element <createIndex> contains hyphen in value: [user-metadata].",
-                "ChangeSet: id=\"changelog_02_4\", author=\"test\". "
-                        + "Rule [" + RuleEnum.NO_HYPHENS_IN_ATTRIBUTES.getValue() + "]\n"
-                        + "Attribute tableName in element <createIndex> contains hyphen in value: [user-metadata].");
+                prepareTestErrorMessage(
+                        "changelog_02_3",
+                        "test",
+                        List.of("Attribute tableName in element <createIndex> contains hyphen in value:"
+                                + " [user-metadata].")),
+                prepareTestErrorMessage(
+                        "changelog_02_4",
+                        "test",
+                        List.of("Attribute tableName in element <createIndex> contains hyphen in value:"
+                                + " [user-metadata].")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                NoHyphensInAttributesProcessor.fromXml(ruleElement).validate(
+                NoHyphensInAttributesProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML);
@@ -151,26 +154,26 @@ public class NoHyphensInAttributesProcessorTest extends RuleProcessorTestUtil {
     public void testValidateFailureWithExclusion() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException,
+            ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_URL));
-        List<String> expectedErrorMessages = List.of(
-                "ChangeSet: id=\"changelog_02_4\", author=\"test\". "
-                        + "Rule [" + RuleEnum.NO_HYPHENS_IN_ATTRIBUTES.getValue() + "]\n"
-                        + "Attribute tableName in element <createIndex> contains hyphen in value: [user-metadata].");
+        List<String> expectedErrorMessages = Collections.singletonList(
+                prepareTestErrorMessage(
+                        "changelog_02_4",
+                        "test",
+                        List.of("Attribute tableName in element <createIndex>"
+                                + " contains hyphen in value: [user-metadata].")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-                NoHyphensInAttributesProcessor.fromXml(ruleElement).validate(
+                NoHyphensInAttributesProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         NO_HYPHENS_IN_ATTRIBUTES_FAILURE_XML);
@@ -192,22 +195,18 @@ public class NoHyphensInAttributesProcessorTest extends RuleProcessorTestUtil {
     public void testValidateSuccess() throws ParserConfigurationException,
             IOException,
             SAXException,
-            ExclusionParserException {
+            ExclusionParserException, ChangeLogParseException {
         // arrange
-        Document document = DocumentBuilderFactory.newInstance()
-                .newDocumentBuilder()
-                .parse(new File(BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_SUCCESS_XML));
+        List<ChangeSetElement> changeSetElements = parseChangeSetFile(
+                BASE_FILE_PATH + NO_HYPHENS_IN_ATTRIBUTES_SUCCESS_XML);
         boolean isExceptionThrown = false;
         Element ruleElement = prepareRuleELement();
-        NodeList changeSetList = document.getElementsByTagName(CHANGE_SET_TAG_NAME);
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
 
         // act
-        for (int i = 0; i < changeSetList.getLength(); i++) {
+        for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                Element changeSetElement = (Element) changeSetList.item(i);
-
-                NoHyphensInAttributesProcessor.fromXml(ruleElement).validate(
+                NoHyphensInAttributesProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
                         NO_HYPHENS_IN_ATTRIBUTES_SUCCESS_XML);
